boomi-k8s-molecule-manifest/boomi-k8s-molecule/templates/service.yml
apiVersion: v1
kind: Service
metadata:
  name: molecule-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
  labels:
    app: molecule
spec:
  selector:
    app: molecule
  type: LoadBalancer
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 9090
    - name: http
      protocol: TCP
      port: 80
      targetPort: 9090
