boomi-k8s-molecule-manifest/boomi-k8s-molecule/templates/ingress.yml
# if ApplicationLoadBalancer
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: molecule-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-2-Ext-2018-06
    alb.ingress.kubernetes.io/load-balancer-attributes: routing.http2.enabled=true
    alb.ingress.kubernetes.io/healthcheck-path: /_admin/status
    alb.ingress.kubernetes.io/success-codes: 200,404
spec:
  rules:
    - http:
        paths:
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: molecule-service
                port:
                  number: 443
